# zanvault

./: .gitignore
crowServer/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CrowApi.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  crow_api.vcxproj  crow_api.vcxproj.filters  main.cpp
crowServer/routes/: data.routes.h  db.routes.h  main.routes.h
crowServer/utils/: getUserDatabasePath.h  randomIDGenerator.h
frontend/: eslint.config.js  index.html  tailwind.config.js  vite.config.js  x.txt
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  Headers.jsx  Navbar.jsx  Topbar.jsx
frontend/src/components/Database/: Datas.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/pages/: Authentication.jsx  Database.jsx  Home.jsx  LogIn.jsx  Main.jsx  SignUp.jsx
